--- a/Refs2021.bib
+++ b/Refs2021.bib
@@ -2,9 +2,9 @@
 
 @techreport{Klein:2021,
   author =        {Klein, H. and Gauss, M. and Tsyro, S. and Nyiri, A. and
-                   Fagerli, H. and Wind, P.},
+                   Fagerli, H.},
   institution =   {The Norwegian Meteorological Institute, Oslo, Norway},
-  note =          {Available for 49 countries, at
+  note =          {Available at
                    \url{www.emep.int/mscw/mscw_publications.html}},
   number =        {{EMEP MSC-W Note 1/2021 Individual Country Reports}},
   title =         {{Transboundary air pollution by sulphur, nitrogen,
@@ -2201,12 +2201,16 @@
 @incollection{ICP2017,
  booktitle = {Manual for modelling and mapping critical loads and levels},
  title={Mapping Critical Levels for Vegetation},
-  institution = {UNECE Convention on Long-range Transboundary Air Pollution},
+ author={{LRTAP}},
+ tmpinstitution = {UNECE Convention on Long-range Transboundary Air Pollution},
+ publisher =     {UNECE Convention on Long-range Transboundary Air
+                   Pollution. International Cooperative Programme on
+                   Effects of Air Pollution on Natural Vegetation and
+                   Crops},
   chapter = 3,
   year = 2017,
   pages = 66,
-  publisher = {ICP vegetation, CEH, UK},
-  tmpurl = {\url{icpvegetation.ceh.ac.uk/get-involved/manuals/mapping-manual}}
+  url = {icpvegetation.ceh.ac.uk/get-involved/manuals/mapping-manual}
 }
 
 @Article{Wiedinmyer2011,
@@ -2220,4 +2224,30 @@
   issn      = {1991-959X},
  doi       = {10.5194/gmd-4-625-2011},
   unique-id = {{ISI:000295379500006}}
+}
+
+@TECHREPORT{EMEP2014,
+  author = {EMEP},
+  title = {Manual for Sampling and Chemical Analyses},
+  institution = {NILU -Norwegian Institute for Air Research, Kjeller, Norway},
+  year = {2014},
+  type = {EMEP/CCC Report},
+  number = {1/2014},
+  URL = {https://www.nilu.no/projects/ccc/manual/index.html}
+}
+
+
+@ARTICLE{Petzold2013,
+  author = {Petzold, A. and Ogren, J. A. and Fiebig, M. and Laj, P. and Li, S.-M.
+        and Baltensperger, U. and Holzer-Popp, T. and Kinne, S. and Pappalardo,
+        G. and Sugimoto, N. and Wehrli, C. and Wiedensohler, A. and Zhang,
+        X.-Y.},
+  title = {Recommendations for reporting "black carbon" measurements},
+  journal = acp,
+  year = {2013},
+  volume = {13},
+  pages = {8365--8379},
+  number = {16},
+  doi = {10.5194/acp-13-8365-2013},
+  url = {http://www.atmos-chem-phys.net/13/8365/2013/}
 }
