--- a/acknow.tex
+++ b/acknow.tex
@@ -10,12 +10,6 @@ This work has been funded by the EMEP Trust Fund.\\
 
 The development of the EMEP MSC-W model has also been supported by the Nordic Council of Ministers, the Norwegian Space Centre, the Norwegian Ministry of Climate and Environment and Copernicus Atmosphere Modelling Service (CAMS) projects.
 
-\SKIP{
-Development work has also been supported at Chalmers University of Technology in Sweden using funds from the Swedish Strategic Research project MERGE, the 
-framework research program on `Photochemical smog in China' financed by
-the Swedish Research Council (639-2013-6917), and FORMAS.\\
-}
-
 The work on condensable organics was partly funded by the Norwegian Ministry of Climate and Environment. 
 
 %In addition, the Nordic Council of Ministers funded an expert workshop on condensables in March 2020, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and possible approaches for dealing with this important class of compounds.\\
@@ -27,9 +21,7 @@ in particular the Contracts on emissions (CAMS\_81) and policy products
 
 The work presented in this report has benefited largely from the work carried out under the four EMEP Task Forces and in particular under TFMM.\\
 
-A large number of co-workers in participating countries have contributed in submitting quality assured data. The EMEP centers would like to express their gratitude for continued good co-operation and effort. The institutes and persons providing data are listed in the EMEP/CCC's data report and identified together with the data sets in the EBAS database.
-
-For the work presented on trends in EC/OC and chemical compostion we would like to express our gratitude to \\
+A large number of co-workers in participating countries have contributed in submitting quality assured data. The EMEP centers would like to express their gratitude for continued good co-operation and effort. The institutes and persons providing data are listed in the EMEP/CCC's data report and identified together with the data sets in the EBAS database. For the work presented on trends in EC/OC and chemical composition we would like to express our gratitude to Laurent Poulain and Noemi Perez  for their extra effort to report data from Melpitz and Montseny respectively \\
 
 For developing standardized methods, harmonization of measurements and improving the reporting guidelines and tools, the close co-operations with participants in the European Research Infrastructure for the observation of Aerosol, Clouds, and Trace gases (ACTRIS) as well as with the Scientific Advisory Groups (SAGs) in WMO/GAW are especially appreciated. \\
 
