--- a/chapterAPPX_CountryRep.tex
+++ b/chapterAPPX_CountryRep.tex
@@ -6,19 +6,18 @@
 \chapter[2019 Country Reports]{Explanatory note on country reports for 2019}
 \label{ch:appx_countryrep_2019}
 
-\old{MG still working on this}
-
 %The purpose of this appendix is to make readers of this report better
 %aware of our web resources (country reports)
 %\vspace{30pt}
 
-The country reports issued by EMEP MSC-W \citep{Klein:2021} focus on chemical species that are relevant to eutrophication, acidification and ground level ozone, but also information on particulate matter is given. More specifically, these country reports provide for each country:
+The country reports issued by EMEP MSC-W \citep{Klein:2021} focus on chemical species that are relevant to eutrophication, acidification and ground level ozone, but information on particulate matter is given as well.
+The country reports provide for each country:
 \begin{itemize}
 \item horizontal maps of emissions, and modelled air concentrations and depositions in 2019;
 \item emission trends for the years 2000 to 2019;
 \item modelled trends of air concentrations and depositions for the years 2000 to 2019;
 \item maps and charts on transboundary air pollution in 2019, visualizing the effect of the country on its surroundings, and vice versa;
-\item comparison charts and maps concerning emissions of condensable organics (see Chapter~\ref{ch:Condensables});
+%\item comparison charts and maps concerning emissions of condensable organics (see Chapter~\ref{ch:Condensables});
 \item frequency analysis of air concentrations and depositions, based on measurements and model results for 2019, along with a statistical analysis of model performance;
 %\item scatter plots for different species, including available stations within the country
 \item maps on the risk of damage from ozone and particulate matter in 2019.
@@ -29,8 +28,9 @@ EMEP MSC-W issues these country reports for 47 Parties to the Convention, and fo
 %An evaluation against measurements from the European Environment Agency's Air Quality e-Reporting data base is not included in the Country notes this year, but can be viewed on the following web page:\\
 %\url{https://aerocom-evaluation.met.no/main.php?project=emep}
 
-All 50 country reports are written in English. For the 12 EECCA countries, the reports are made available also in Russian. All country reports can be downloaded in pdf format from the MSC-W report page on the EMEP website:\\
-\url{https://emep.int/mscw/mscw_publications.html#2021}
+All 50 country reports are written in English. However, for the 12 EECCA countries, the reports are made available also in Russian. All country reports can be downloaded in pdf format from the MSC-W report page on the EMEP website:\\
+
+\url{https://emep.int/mscw/mscw_publications.html#2021}\\
 
 This year, the country reports are found under the header `MSC-W Data Note 1/2021 Individual Country Reports'. The reports for each country can be selected from a drop-down menu.
 
