--- a/chapterAPPX_ModelEval.tex
+++ b/chapterAPPX_ModelEval.tex
@@ -6,31 +6,29 @@
 \chapter[2019 Model Evaluation]{Model Evaluation}
 \label{ch:appx_modeleval}
 
-\old{MG this appendix has to be completely revised when the aeroval page is ready}
-
 %The purpose of this appendix is to make readers of this report better
 %aware of our web resources (evaluation report/supplementary material)
 %\vspace{30pt}
 
 The EMEP MSC-W model is regularly evaluated against various kinds of measurements, including ground-based, airborne and satellite measurements.
+As the main application of the EMEP MSC-W model within the LRTAP Convention is to assess the status of air quality on regional scales and to quantify long-range transboundary air pollution, the emphasis of the evaluation performed for the EMEP status reports has traditionally been put on the EMEP measurement sites.
 
-As the main application of the EMEP MSC-W model within the LRTAP Convention is to assess the status of air quality on regional scales and to quantify long-range transboundary air pollution, the focus of the evaluation performed for the EMEP status reports is on the EMEP measurement sites.
-
-Nevertheless, a more detailed evaluation against measurements from both the EMEP network and the European Environment Agency's (EEA) Air Quality e-Reporting Database can now be found at the AeroVal webpage that has been developed recently for the evaluation
+However, a more detailed evaluation against measurements from both the EMEP network and the European Environment Agency's (EEA) Air Quality e-Reporting Database can now be found at the AeroVal webpage that has been developed recently for the evaluation
 of EMEP MSC-W model output:\\
-\url{https://aeroval.met.no/evaluation.php?project=emep}.
-
+\\
+\url{https://aeroval.met.no/evaluation.php?project=emep}\\
+\\
 On that page the user can select the set of measurement data, the
 station or country of interest, and view a large number of statistical
-parameters (bias, correlation, root mean square error, etc.).
-
+parameters (bias, correlation, root mean square error, etc.). AeroVal is flexible and allows using all available observations, including irregular and non-standard-frequency measurements.
+\\
 The web interface displays co-located observational and model datasets
 and contains:
 \begin{itemize}
 
 \item daily and monthly time series for each station, averaged per
   country, or the whole area covered by the model and
-  the measurement network;
+  the measurement network (labeled 'WORLD');
 %\item seasonal- and annual-mean diurnal variation for each of the seven
 %  days of the week;
 \item statistics and scatter plots calculated for each station and country;
@@ -49,7 +47,7 @@ etc.) are available both for viewing and for download.
 
 \vspace{1cm}
 
-To allow for easy comparison of this year's model performance with earlier evaluation reports, Table~\ref{tab:tableOldFashioned} summarizes common statistical measures of model performance, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}) against EMEP measurement stations within the whole model domain.
+To allow for comparison of this year's model performance with earlier evaluation reports, Table~\ref{tab:tableOldFashioned} summarizes common statistical measures of model performance, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}) against EMEP measurement stations within the whole model domain.
 
 \begin{table}\small
 % in 2020 (for reporting 2018), the numbers in this table were taken from:
@@ -424,9 +422,9 @@ averages over all EMEP sites with measurements.  N$_{stat}$= number of stations,
 wd=wet deposition (integrated over the year and stations), cp= concentration
 in precipitation, Corr. = spatial correlation coefficient, RMSE = root mean
 square error, IOA = index of agreement. The requirement for being included
-  is that measurements be available for 75\% of all days in 2018, except
+  is that measurements be available for 75\% of all days in 2019, except
   for the components marked with $\star$, where observational data covers
-  the whole year of 2018, but with measurements 3-5 times a month.}
+  the whole year of 2019, but with measurements 3-5 times a month.}
 \label{tab:tableOldFashioned}
 \end{center}
 \end{table}
