--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -233,7 +233,7 @@ be set to either `Total', or `NoFert'.
 \label{ssec:DMS}
 
 
-A new option to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and the meteorological data driving the EMEP model, and it has been used for this year's status run. 
+A new option to calculate biogenic emissions of dimethyl sulfide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and the meteorological data driving the EMEP model, and it has been used for this year's status run. 
 
 At each location and timestep, the model calculates the Schmidt number ($Sc$) from the sea surface temperature ($SST$, given in \textdegree C) with the 4th-degree formula of \citet{Wanninkhof2014}:
 
