--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -15,11 +15,11 @@ are documented in the following sections.
 
 The EMEP Reporting guidelines \citep{UNECE2014} requests all Parties
 to the LRTAP Convention to report annually emissions of air pollutants
-(\sox\footnote{``Sulphur oxides (\sox)'' means all sulphur compounds,
-  expressed as sulphur dioxide (\soii), including sulphur trioxide
-  (\soiii), sulphuric acid (\sulacid), and reduced sulphur compounds,
-  such as hydrogen sulphide (H${_2}$S), mercaptans and dimethyl
-  sulphides, etc.}, \noii\footnote{``Nitrogen oxides (\nox)'' means
+(\sox\footnote{``sulfur oxides (\sox)'' means all sulfur compounds,
+  expressed as sulfur dioxide (\soii), including sulfur trioxide
+  (\soiii), sulfuric acid (\sulacid), and reduced sulfur compounds,
+  such as hydrogen sulfide (H${_2}$S), mercaptans and dimethyl
+  sulfides, etc.}, \noii\footnote{``Nitrogen oxides (\nox)'' means
   nitric oxide and nitrogen dioxide, expressed as nitrogen dioxide
   (\noii).}, CO, NMVOCs\footnote{``Non-methane volatile organic
   compounds'' (NMVOCs) means all organic compounds of an anthropogenic
@@ -185,7 +185,7 @@ The following subchapters describe important aspects of the 2021 EMEP datasets, 
 \begin{itemize}
     \item The status of reporting of national gridded emissions data and the extent to which these are used to distribute emissions spatially (Section~\ref{sec:griddedemis})
     \item The extent to which sectoral emissions were gap-filled or replaced (Section~\ref{sec:gapfilling})
-    \item  The sectoral contributions (Section~\ref{sec:GNFRsec}) and temporal trends (Section~\ref{sec:emistrends}) in the emissions of carbon monoxide, nitrogen oxides, sulphur oxides, ammonia, non-methane volatile organic carbons, and particulate matter including black carbon. Trends in shipping emissions are discussed separately (Section~\ref{sec:shiptrends}).     
+    \item  The sectoral contributions (Section~\ref{sec:GNFRsec}) and temporal trends (Section~\ref{sec:emistrends}) in the emissions of carbon monoxide, nitrogen oxides, sulfur oxides, ammonia, non-methane volatile organic carbons, and particulate matter including black carbon. Trends in shipping emissions are discussed separately (Section~\ref{sec:shiptrends}).     
 \end{itemize}
 
 
@@ -370,7 +370,7 @@ International shipping emissions are not reported by Parties. Gridded emissions 
 
 
 According to FMI the high increase in shipping emissions from 2018 to 2019 is because much more small vessels are using AIS than in previous years, which means that emissions from this small vessels are included in the shipping emissions for 2019, but not in previous years.
-Due to the selective implementation of the Sulphur Emission Control Areas (SECAs) on the North Sea and Baltic Sea only, the emission trends differ between those seas and the other seas.
+Due to the selective implementation of the Sulfur Emission Control Areas (SECAs) on the North Sea and Baltic Sea only, the emission trends differ between those seas and the other seas.
 
 
 
