--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -112,7 +112,7 @@ website, \url{http://www.emep.int}, to access this additional information.
 \section{Definitions, statistics used}
 \label{DEFS}
 
-For sulphur and nitrogen compounds, the basic units used throughout
+For sulfur and nitrogen compounds, the basic units used throughout
 this report are $\mu$g (S or N)/m$^{3}$ for air concentrations and
 mg (S or N)/m$^{2}$ for depositions. Emission data, in particular in
 some of the Appendices, is given in Gg (SO$_2$)  and Gg (NO$_2$) in
@@ -168,9 +168,9 @@ start of the growing season (SGS), to the end (EGS).
 For the generic crop and forest species, the suffix $gen$ can be
 applied, e.g. POD$_{Y, gen}$ is used for forests.
 POD was introduced in 2009 as an easier and  more descriptive term for the
-accumulated ozone flux (\AFstY was used previously). The definitions of POD are 
-discussed further in \citet{R2010:Fluxes}. See
-also \citet{MillsGCB2011,MillsAE2011} and \citet{MillsGCB2018a}.
+accumulated ozone flux (\AFstY was used previously). 
+%The definitions of POD are discussed further in \citet{R2010:Fluxes}. 
+See also \citet{MillsGCB2011,MillsAE2011,MillsGCB2018a} and \citet{ICP2017}.
 
 
      \item[AOT40] -
@@ -187,16 +187,18 @@ relevant growing season for the vegetation concerned, and in some daytime period
 corresponding unit are ppb.hours (abbreviated to ppb.h).  The usage
 and definitions of AOT40 have changed over the years though, and also
 differ between UNECE and the EU.
-\cite{MappingManual:Veg} give the latest definitions for UNECE work, and
+%\cite{MappingManual:Veg} 
+\citet{ICP2017}
+give the latest definitions for UNECE work, and
 describes carefully how AOT40 values are best estimated for local
 conditions (using information on real growing seasons for example),
-and specific types of vegetation.  In the EU approaches \ce{O3} concentrations are taken directly from observations (at typically ca. 3~m height), or grid-average 3~m modelled values, for the AOT40 calculations. In the Mapping Manual
+and specific types of vegetation.  In the EU approaches, \ce{O3} concentrations are taken directly from observations (at typically ca. 3~m height), or grid-average 3~m modelled values. In the Mapping Manual
 \cite[]{MappingManual:Veg} approaches, there is a strong emphasis on
 estimating AOT40 using ozone levels at the top of the vegetation
 canopy. Since O$_3$ concentrations can have strong vertical gradients, this approach leads to lower AOT40 estimates than with the EU approach.
 
 The EMEP MSC-W model now generates a number of AOT-related outputs,
-in accordance with the recommendations of \cite{MappingManual:Veg}, but in this report we will concentrate in this report on four definitions, derived from either `EU' approach or `UNECE' approaches:
+in accordance with the recommendations of \cite{ICP2017}, but in this report we will concentrate in this report on four definitions, derived from either `EU' approach or `UNECE' approaches:
 
 \begin{description}
    \item[AOT40c] - AOT40 calculated using EU criteria, from modelled (3~m) or observed ozone, for the assumed crop growing season of May--July. Here we use the EU definitions of day hours as 08:00--20:00.
@@ -224,20 +226,20 @@ UNECE definition uses clear-sky global radiation exceeding 50 W
 m$^{-2}$ to define daylight, whereas the EU AOT definitions use day
 hours from 08:00-20:00.).
 
-In practice, it is very difficult to convert measured \ce{O3} from an EMEP observation site to the UNECE AOT40 values, since there are no data with which is to estimate the vertical gradient to get to upper-canopy \ce{O3}. Therefore, in the comparison of modelled and observed AOT40s in chapter \ref{ch:chapterStatus} and \ref{ch:Trends}, we have used the EU AOT definitions, since this approach is readily applicable to observed as well as modelled values. We do, however, present source-receptor calculations for the UNECE metrics \aotucf and \aotucc in Chapter~\ref{ch:appx_sr2019}.
+In practice, it is very difficult to convert measured \ce{O3} from an EMEP observation site to the UNECE AOT40 values, since there are no data with which is to estimate the vertical gradient to get to upper-canopy \ce{O3}. Therefore, in the comparison of modelled and observed AOT40s in Chapters \ref{ch:chapterStatus} and \ref{ch:Trends}, we have used the EU AOT definitions, since this approach is readily applicable to observed as well as modelled values. We do, however, present source-receptor calculations for the UNECE metrics \aotucf and \aotucc in Appendix~\ref{ch:appx_sr2019}.
 
 The AOT40 levels reflect interest in long-term ozone exposure which is
 considered important for vegetation - critical levels of 3~000~ppb.h
 have been suggested for agricultural crops and natural vegetation, and
 5~000~ppb.h for forests \cite[]{MappingManual:Veg}.
 Note that recent  UNECE workshops have recommended that AOT40 concepts
-are replaced by ozone flux estimates for crops and forests.
-\citep[See also][]{R2010:Fluxes}.
+are replaced by ozone flux estimates for crops and forests
+\citep[see also][]{ICP2017}.
 \end{description}
 
 
 
-Furthermore, this report includes concentrations of particulate matter (PM). The basic units \linebreak throughout this report
+Furthermore, this report includes concentrations of particulate matter (PM). The basic units throughout this report
 are \ug for PM concentrations and the following acronyms are used for different components to PM:
 
 \begin{description}
@@ -250,7 +252,7 @@ be entirely in the particle phase, see \citet{R2020:SVOC}.)
   arising from the oxidation products of gas-phase organic species.
 
 \item[SIA]- secondary inorganic aerosols, defined as the sum of
-  sulphate (SO$^{2-}_4$), nitrate (NO$^-_3$) and ammonium (NH$^+_4$).
+  sulfate (SO$^{2-}_4$), nitrate (NO$^-_3$) and ammonium (NH$^+_4$).
   In the EMEP MSC-W model SIA is calculated as the sum: SIA= SO$^{2-}_4$
   + NO$^-_3$(fine) + NO$^-_3$(coarse) + NH$^+_4$.
 
@@ -673,7 +675,7 @@ Katarina Mareckova, Robert Wankmueller, Marion Pinterits, Bernhard Ullrich and S
 
  \item[]
  Heiko Klein, Michael Gauss, \'Agnes  Ny\'{\i}ri, Svetlana Tsyro, Hilde Fagerli and Peter Wind. 
-Transboundary air pollution by sulphur, nitrogen, ozone and particulate matter in 2019, Country Reports. EMEP/MSC-W Data Note 1/2021
+Transboundary air pollution by sulfur, nitrogen, ozone and particulate matter in 2019, Country Reports. EMEP/MSC-W Data Note 1/2021
 
 
  \end{list}
