--- a/report.tex
+++ b/report.tex
@@ -154,7 +154,7 @@
 \newcommand{\coii}{\ce{CO2}\xspace}
 \newcommand{\chiv}{\ce{CH4}\xspace}
 \newcommand{\niio}{\ce{N2O}\xspace}
-\newcommand{\nhiv}{\ce{NH4}\xspace}
+\newcommand{\nhiv}{\ce{NH4+}\xspace}
 \newcommand{\noiii}{\ce{NO3-}\xspace}
 
 % Soil NO, August 2021
