--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -1,6 +1,6 @@
 \chapter*{Executive Summary}
 
-\old{TODO}
+
 
 This report presents the EMEP activities in 2020 and 2021 in relation to transboundary
 fluxes of particulate matter, photo-oxidants, acidifying and
@@ -11,7 +11,7 @@ introduces specific relevant research activities addressing EMEP key
 challenges, as well as technical developments of the observation and
 modelling capacities. This year special attention has been given to the trends in air pollution during the last decades, in support of the Gothenburg Protocol review.
 
-\subsubsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
+\subsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
 In the first chapter, the status of air pollution in 2019 is presented, combining 
 meteorological information and emissions with numerical simulations using the EMEP MSC-W model together with observed air concentration and deposition data.
 
@@ -49,7 +49,7 @@ Most of the exceedances registered at the central European sites occurred during
 
 %Out of the 62 sites, days with \PM[10] exceedances of 50 \ug were observed at 36, but in all cases with fewer than the upper EU-limit of 35 days per year registered. Still, 18 sites had more than 3 exceedance days (the upper limit recommended by the WHO AQGs). %The highest numbers of days with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17 at CZ0003. 
 %Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  
-%The modelled numbers of exceedance days in 2018 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
+%The modelled numbers of exceedance days for 2019 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
 %and overestimating at some Mediterranean sites. 
 %The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
@@ -67,7 +67,7 @@ Most of the exceedances registered at the central European sites occurred during
 
 
 
-\subsubsection*{Status of emission reporting}
+\subsection*{Status of emission reporting}
 In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS while 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
 After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
@@ -91,51 +91,88 @@ In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could
 %The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this at all in the Summary?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
 %Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
 
-\subsubsection*{Trends in air pollution 2000-2019}
+\subsection*{Trends in air pollution 2000-2019}
 In December 2019, the Executive Body launched the review of the Gothenburg Protocol as amended in 2012. In order to support the review and assess the progress made towards achieving the environmental and health objectives of the Protocol, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations.
-We analyze trends in air concentrations for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
+We analyze trends in air concentrations for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, and exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 %Note on validity Hilde
-Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
+Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA countries. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000--2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
+Furthermore, for the different components analyzed, the number of observational sites available and the geographical coverage differs. Thus the trends for the different components are not fully consistent. 
 
 %SOX: Wenche
-The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively.
-
-It is not clear why the reductions in the reported emissions and the trends calculated by the model are larger than what it seen in the the observations. It might potentially indicate that the emission reductions reported are somewhat optimistic for some countries. However, firm conclusions are difficult to draw.
+\subsubsection*{Sulfur}
+The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% 
+%(-4.3\% yr$^{-1}$) 
+the last two decades. The decrease is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively. 
 
 %NOx Hilde
-We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen. The changes found for observations of oxidized nitrogen compunds are also significantly smaller than the changes in reported emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
+\subsubsection*{Oxidized nitrogen}
+We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) have been decreasing since 2000. However, the reduction in the observations 
+%1.2\% yr$^{-1}$) 
+for NO$_2$ (24\%) and for wet deposition of oxidized nitrogen (26\%) %in total, -1.4\% yr$^{-1}$) 
+are smaller than in model calculations (42\%
+%, -2.2\% yr$^{-1}$ 
+for NO$_2$ and 40\% 
+%(-2.3\% yr$^{-1}$) 
+for wet deposition of oxidized nitrogen). The reductions in observations
+%found for observations of oxidized nitrogen compunds 
+are also significantly smaller than the changes in reported emissions of \noii (-48\% for EU27+UK+EFTA countries) for 2000--2019.
+
+It is not clear why the reductions in the reported emissions of oxidized nitrogen (and sulfur) and the trends calculated by the model are larger than what is seen in the the observations, but it might potentially indicate that the emission reductions reported are somewhat optimistic for some countries.
 
 %redN Hilde 
+\subsubsection*{Reduced nitrogen}
 For reduced nitrogen, the observations and the model calculations confirm that very small reductions of ammonia emissions have been achieved during the 2000--2019 period. 
 Both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen.
-Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes of about -1.45\% yr$^{-1}$ (observations) and -1.33\% yr$^{-1}$ (model calculations) and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% (25\%) in observations (model calculations) for 2000-2019. The trend for ammonium aerosols is even more negative, -2.6 \% yr$^{-1}$ both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes observed and calculated are positive. 
+On the contrary, total ammonium (\nhiii + \nhiv) in air is decreasing about 27\% in observations and 25\% in model calculations, with many more sites showing statistically significant trends.
+%-1.45\% yr$^{-1}$ (observations) and -1.33\% yr$^{-1}$ (model calculations) and with a larger fraction of the sites having significant trends. 
+These changes are larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%)
+%, in total 27\% (25\%) in observations (model calculations)
+for 2000-2019. The reduction for ammonium aerosols is even larger, around 49\%, 
+%-2.6 \% yr$^{-1}$,  
+both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes observed and calculated are positive. 
 
-These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols have been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
+These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and oxidized nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols has been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
 
 
 
 
 %OC and EC and 'do the organic fraction increase?': David & Karl Espen
+\subsubsection*{EC and OC}
 For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime. 
 Trends in summertime OC were much less clear in both the model and observations, almost certainly due to the increased impact of biogenic sources.
 The model reproduced observed EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
 Organic aerosol comprises a major fraction of \pmfine, but major efforts are needed to separate and understand its natural and anthropogenic components, in order to get a quantitative overview of the abatable fractions.
 %
+\subsubsection*{\PM[10] and \PM[2.5]}
+For \PM[10] and \PM[2.5] statistically significant downward trends are identified for the majority of the sites for the period 2000-2019 (37 sites for \PM[10] and 19 for \PM[2.5]). 
+%located mostly in the western part of the EMEP domain. 
+During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (and 37 \% in model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] was 46 \%  (48 \% estimated by the model). The smaller reductions in \PM[10] than in \PM[2.5] can be explained by the larger contribution of natural aerosols (i.e. sea salt and windblown dust) in the coarse fraction of the former. 
 
+PM is a complex pollutant, consisting of aerosol species both emitted directly and formed from gaseous precursors. 
+%Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions contributed to reduce PM concentrations. During the 2000-2019 period, \soiv, \noii and \nhiv decreased on average by 3.2, 2.0 and 2.6 \% $yr^{-1}$ derived from the long term EMEP observations and by 3.8, 2.5 and 2.6 \% $yr^{-1}$ from the model simulations, thus contributing substantially to the \PM[10] and \PM[2.5] decreases. Substantial decreases of EC and wintertime OC (by around 4.5~\%/yr) was observed from 2010 to 2019, whilst the trends in summertime OC were much less clear (unfortunately consistent observational data for carbonaceous aerosols is not available for the 2000s).  
+Reduction in the secondary inorganic aerosols (\soiv, \noiii and \nhiv) components contributed substantially to the \PM[10] and \PM[2.5] decreases in 2000-2019. The contribution from EC and OC is more difficult to quantify due to the lack of observation in the 2000s. However, as described above, considerable reductions in EC and wintertime OC have been found for the 2010--2019 period.  
 
-\QUERY{PM and exceedances of WHO guideline values for PM$_{2.5}$: Svetlana}
+%For the 2010-2019 period, the analysis shows
+%considerable reductions in EC and wintertime OC ,  but not for summertime OC.
+
+The number of EMEP sites, at which annual mean \PM[10] and \PM[2.5] concentrations exceeded WHO AQG\footnote{AQG = Air Quality Guidelines. The recommended levels are 20 and 10 \ug for \PM[10] and \PM[2.5], respectively } recommended levels, decreased during the period 2001-2019. It should be pointed out that these results cannot be considered very robust as the number of sites with exceedances is small. 
+
+%The model results also show a decrease in the number of exceedance sites for \PM[2.5], whereas it in general fails to reproduce observed exceedances for \PM[10].
+
 
 %Ozone Sverre
+\subsubsection*{Ozone}
 Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49\degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49\degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49\degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
 
 %Exceedances of critical loads Hilde. Done 31.8.2021
+\subsubsection*{Exceedances of critical loads}
 The exceedances (AAE) of critical loads have been calculated for the years 2000, 2005, 2010, 2015 and 2019 based on the 0.1$\degrees \times$ 0.1$\degrees$ EMEP MSC-W calculations discussed in this report. The critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019. The European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
 ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of critical loads are found in the Po Valley in Italy, the
 Dutch-German-Danish border areas and in north-eastern Spain.
 
 By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
 exceedances can be found in the Netherlands and its border areas to Germany and
-Belgium, and some smaller maxima in southern Germany and Czechia, whereas most of Europe is not exceeded
+Belgium, and some smaller maxima in southern Germany and Czechia, whereas most of Europe is not exceeded.
 Acidity exceedances occur
 on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
 AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019).
@@ -149,7 +186,7 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 
 
 %Technical EMEP Developments
-\subsubsection*{Model improvements} %DS updated 23/7/2021
+\subsection*{Model improvements} %DS updated 23/7/2021
 
 The EMEP MSC-W model code has been upgraded in a number of ways. 
 A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS81 project. 
@@ -158,7 +195,7 @@ The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and
 
 
 
-\subsubsection*{Development in the monitoring programme} %WAa updated 31/8/2021
+\subsection*{Development in the monitoring programme} %WAa updated 31/8/2021
 The last chapter of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2010-2019. With respect to the requirement for level 1 monitoring, 35\% of the Parties have had an improvement since 2010, while 37\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development, but only few sites have a complete measurement program.
 
 The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow.
