Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1202,7 +1202,7 @@ During the 2000--2019 period, \soiv, \noii and \nhiv decreased on average by 3.2
  
  Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon (in the \PM[2.5] size fraction only) have only been analysed for a 2010--2019 period (see discussion in Sect.~\ref{sec:trendsECOC}). 
  %HF Something on OC/EC trends + total
- During this 10-year period, a substantial decrease (around 4.5~\%/yr) was observed for EC, while the average decrease for OC was smaller (2.4~\%/yr). A similar to EC decrease was found for wintertime OC concentrations, whilst the trends in summertime OC were much less clear. Thus, decreases of both secondary inorganic aerosols as well as primary and secondary organic compounds have contributed to the decreases in PM concentrations.
+ During this 10-year period, a substantial decrease (around 4.5~\%/yr) was observed for EC, while the average decrease for OC was smaller (2.4~\%/yr). A similar to EC decrease was found for wintertime OC concentrations, where the trends in summertime OC were much less clear. Thus, decreases of both secondary inorganic aerosols as well as primary and secondary organic compounds have contributed to the decreases in PM concentrations.
  
  Some examples of the changes in the chemical composition of \PM[2.5] from 2000(2002) to 2019 are given in Figure \ref{fig:KEX4}.
  %for the four of the sites with enough measurements for deriving the mass balance. 
